@@ -90,6 +90,7 @@ Version 1.5.2 - CVS
   - Added line length setting in local_file address book backend (#1181561).
   - Removed proprietary wrap attribute from compose form (#1512681).
   - Fix URL for Read Receipts being incorrect in some cases (#1177518).
+  - Don't allow selecting INBOX as Sent, Draft or Trash folder (#1242346).
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
